src/styles/global.css
@import "tailwindcss";

/* Inter Font Family */
@font-face {
  font-family: 'Inter';
  src: url('/fonts/Inter_18pt-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Inter';
  src: url('/fonts/Inter_18pt-Medium.ttf') format('truetype');
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Inter';
  src: url('/fonts/Inter_18pt-SemiBold.ttf') format('truetype');
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Inter';
  src: url('/fonts/Inter_18pt-Bold.ttf') format('truetype');
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

@theme {
  /* Neutral Grey Colors */
  --color-grey-900: #0F0F19;
  --color-grey-800: #1A1A2E;
  --color-grey-700: #252538;
  --color-grey-650: #2C2C40;
  --color-grey-600: #333347;
  --color-grey-500: #474757;
  --color-grey-400: #6B6B7B;
  --color-grey-300: #9999A8;
  --color-grey-200: #C4C4D1;
  --color-grey-100: #E8E8EF;
  --color-grey-50: #F5F5F9;

  /* Spectral Star Colors */
  --color-spectral-O: #9bb0ff;
  --color-spectral-B: #aabfff;
  --color-spectral-A: #f8f7ff;
  --color-spectral-F: #fff4e8;
  --color-spectral-G: #fff5b8;
  --color-spectral-K: #ffc870;
  --color-spectral-M: #ff6b4a;
  --color-spectral-L: #c45530;
  --color-spectral-T: #a855f7;
  --color-spectral-Y: #7c3aed;
  --color-spectral-D: #e0e7ff;

  /* Font Families */
  --font-sans: Inter, system-ui, sans-serif;

  /* Custom Font Sizes */
  --font-size-ui: 11px;
}

/* Hide scrollbars */
.scrollbar-hide {
  -ms-overflow-style: none;  /* Internet Explorer 10+ */
  scrollbar-width: none;  /* Firefox */
}
.scrollbar-hide::-webkit-scrollbar { 
  display: none;  /* Safari and Chrome */
}

/* Disable text selection for app-like UI */
.select-none {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

